# grpc-multithreaded-server

./: .gitignore  CMakeLists.txt  README.md
hrs_server/: CMakeLists.txt
hrs_server/api/: CMakeLists.txt
hrs_server/api/protos/: shared.proto  sql.proto  srv.proto  test.proto
hrs_server/api/src/: data_converter.cpp  data_converter.h  hrs_converter.cpp  hrs_data_converter.h  hrs_error_codes.h
hrs_server/client_lib/: CMakeLists.txt  hrs_channel.cpp  hrs_channel.h  hrs_keep_alive.cpp  hrs_keep_alive.h  hrs_sql_request.cpp  hrs_sql_request.h
hrs_server/client_test/: CMakeLists.txt  client.cpp
hrs_server/server/: CMakeLists.txt  background_worker.cpp  background_worker.h  hrs_auth.cpp  hrs_auth.h  hrs_server.cpp  hrs_server.h  main.cpp
hrs_server/server/services/: hrs_factory.cpp  hrs_factory.h  hrs_request_worker.cpp  hrs_request_worker.h
hrs_server/server/services/auth/: srv_auth.cpp  srv_auth.h
hrs_server/server/services/sql/: exec_sql.cpp  srv_sql.h
hrs_server/server/services/test/: srv_test.h  test_request1.cpp  test_request2.cpp
server_lib/: CMakeLists.txt  read.me  sl_auth.cpp  sl_auth.h  sl_request_processor.cpp  sl_request_processor.h  sl_request_worker.cpp  sl_request_worker.h  sl_server.cpp  sl_server.h  sl_service_factory.cpp  sl_service_factory.h  sl_session_manager.cpp  sl_session_manager.h  sl_stoppable_worker.cpp  sl_utils.cpp  sl_utils.h
sql_lib/: CMakeLists.txt  sl_binder.cpp  sl_binder.h  sl_connection.cpp  sl_connection.h  sl_connection_pool.cpp  sl_connection_pool.h  sl_error.cpp  sl_error.h  sl_query.cpp  sl_query.h
sql_lib/plugins/psql/: psql_connection.cpp  psql_connection.h  psql_impl.cpp  psql_impl.h
ssl/: create_keys.sh  server.crt  server.key
utils/: CMakeLists.txt  sl_error.cpp  sl_error.h  sl_sha256.cpp  sl_stoppable_worker.h  sl_utils.cpp  sl_utils.h
